@@ -81,9 +81,10 @@ function print_usage() {
   echo "    -type <content/type> (default: application/xml)"
   echo ""
   echo "  Other options:"
-  echo "    -filetypes <type>[,<type>,...] (default: xml,json,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log)"
+  echo "    -filetypes <type>[,<type>,...] (default: xml,json,jsonl,csv,pdf,doc,docx,ppt,pptx,xls,xlsx,odt,odp,ods,ott,otp,ots,rtf,htm,html,txt,log)"
   echo "    -params \"<key>=<value>[&<key>=<value>...]\" (values must be URL-encoded; these pass through to Solr update request)"
   echo "    -out yes|no (default: no; yes outputs Solr response to console)"
+  echo "    -format solr (sends application/json content as Solr commands to /update instead of /update/json/docs)"
   echo ""
   echo ""
   echo "Examples:"
